--- a/IDE/Forms/idemainform.lfm
+++ b/IDE/Forms/idemainform.lfm
@@ -78,58 +78,242 @@ object MainForm: TMainForm
         object AddUnitBtn: TSpeedButton
           Left = 0
           Height = 24
+          Hint = 'Neue AAL Quelltextdatei'
           Top = 0
           Width = 23
           Align = alLeft
+          Flat = True
+          ShowHint = True
+          ParentShowHint = False
         end
         object AddFormBtn: TSpeedButton
           Left = 23
           Height = 24
+          Hint = 'Neue AAL Form'
           Top = 0
           Width = 23
           Align = alLeft
+          Flat = True
+          Glyph.Data = {
+            36090000424D3609000000000000360000002800000018000000180000000100
+            2000000000000009000064000000640000000000000000000000FF9933000000
+            0000000000000000000000000000000000000000000000000000000000000000
+            0000000000000000000000000000000000000000000000000000000000000000
+            00000000000000000000000000000000000000000000FF993300000000000000
+            0000FF973054FF8E1E81FF8C1980FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C
+            1A80FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C1A80FF8C
+            1A80FF8C1A80FF8C1A80FF8C1880FF983171000000000000000000000000FF97
+            3054FF9D3BF3FFE2C6FFFFF3E7FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2
+            E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2E4FFFFF2
+            E4FFFFF2E4FFFFF2E4FFFFF6EEFFFF9C39FAFF9730530000000000000000FF8E
+            1E81FFE2C6FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFBFBFBFFFBFBFBFFFBFB
+            FBFFFBFBFBFFFBFBFBFFFBFCFDFFFFE3C7FFFF8E1E810000000000000000FF8C
+            1980FFF3E7FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFD8D8D8FFDADADAFFDADA
+            DAFFDADADAFFDADADAFFD8D8D8FFFFF5E9FFFF8C19800000000000000000FF8C
+            1A80FFF2E4FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFBFBFBFFFBFBFBFFFBFB
+            FBFFFBFBFBFFFBFBFBFFFBFBFBFFFFF2E5FFFF8C1A800000000000000000FF8C
+            1A80FFF2E4FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF2E4FFFF8C1A800000000000000000FF8C
+            1A80FFF2E4FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF2E4FFFF8C1A800000000000000000FF8C
+            1A80FFF2E4FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF2E4FFFF8C1A800000000000000000FF8C
+            1A80FFF2E4FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF2E4FFFF8C1A800000000000000000FF8C
+            1A80FFF2E4FFFDFDFDFFEDEDEDFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEE
+            EEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEE
+            EEFFFFFFFFFFFFFFFFFFFFFFFFFFFFF2E4FFFF8C1A800000000000000000FF8C
+            1A80FFF2E4FFFBFBFBFFDADADAFFDCDCDCFFDCDCDCFFDCDCDCFFDCDCDCFFDCDC
+            DCFFDCDCDCFFDCDCDCFFDCDCDCFFDCDCDCFFDCDCDCFFDCDCDCFFDCDCDCFFDADA
+            DAFFFFFFFFFFFFFFFFFFFFFFFFFFFFF2E4FFFF8C1A800000000000000000FF8C
+            1A80FFF2E4FFFFFFFFFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFD
+            FDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFD
+            FDFFFFFFFFFFFFFFFFFFFFFFFFFFFFF2E4FFFF8C1A800000000000000000FF8C
+            1A80FFF2E4FFFBFBFBFFD8D8D8FFDADADAFFDADADAFFDADADAFFDADADAFFDADA
+            DAFFDADADAFFDADADAFFDADADAFFDADADAFFDADADAFFDADADAFFDADADAFFD8D8
+            D8FFFFFFFFFFFFFFFFFFFFFFFFFFFFF2E4FFFF8C1A800000000000000000FF8C
+            1A80FFF2E4FFFFFFFFFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFD
+            FDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFDFDFFFDFD
+            FDFFFFFFFFFFFFFFFFFFFFFFFFFFFFF2E4FFFF8C1A800000000000000000FF8C
+            1A80FFF2E4FFFBFBFBFFDADADAFFDCDCDCFFDCDCDCFFDCDCDCFFDCDCDCFFDCDC
+            DCFFDCDCDCFFDCDCDCFFDCDCDCFFDCDCDCFFDCDCDCFFDCDCDCFFDCDCDCFFDADA
+            DAFFFFFFFFFFFFFFFFFFFFFFFFFFFFF2E4FFFF8C1A800000000000000000FF8C
+            1A80FFF2E4FFFDFDFDFFEDEDEDFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEE
+            EEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEEEEFFEEEE
+            EEFFFFFFFFFFFFFFFFFFFFFFFFFFFFF2E4FFFF8C1A800000000000000000FF8C
+            1A80FFF2E4FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF2E4FFFF8C1A800000000000000000FF8E
+            1D80FFE7CFFFFFF3E6FFFFF3E6FFFFF3E6FFFFF3E6FFFFF3E6FFFFF3E6FFFFF3
+            E6FFFFF3E6FFFFF3E6FFFFF3E6FFFFF3E6FFFFF3E6FFFFF3E6FFFFF3E6FFFFF3
+            E7FFFFF4E4FFFFF4E4FFFFF4E4FFFFE7CFFFFF8E1D800000000000000000FF9A
+            3580FF9328FFFF9326FFFF9326FFFF9326FFFF9326FFFF9326FFFF9326FFFF93
+            26FFFF9326FFFF9326FFFF9326FFFF9326FFFF9326FFFF9326FFFF9326FFFF96
+            20FF935D92FF99608CFF935D92FFFF9622FFFF9A35800000000000000000FF99
+            3381FF9933FFFF9933FFFF9933FFFF9933FFFF9933FFFF9933FFFF9933FFFF99
+            33FFFF9933FFFF9933FFFF9933FFFF9933FFFF9933FFFF9933FFFF9933FFFF9F
+            27FF252CFFFF3132FFFF252CFFFFFF9F27FFFF9933810000000000000000FF99
+            3354FF9933F3FF9933FFFF9933FFFF9933FFFF9933FFFF9933FFFF9933FFFF99
+            33FFFF9933FFFF9933FFFF9933FFFF9933FFFF9933FFFF9933FFFF9933FFFF9F
+            27FF272DFFFF3333FFFF272DFFFFFF9F27FAFF99335300000000000000000000
+            0000FF993354FF993381FF993380FF993380FF993380FF993380FF993380FF99
+            3380FF993380FF993380FF993380FF993380FF993380FF993380FF993380FF9F
+            2780272DFF803333FF80272DFF80FFA026710000000000000000FF9933000000
+            0000000000000000000000000000000000000000000000000000000000000000
+            0000000000000000000000000000000000000000000000000000000000000000
+            00000000000000000000000000000000000000000000FF993300
+          }
+          ShowHint = True
+          ParentShowHint = False
         end
         object SaveAsBtn: TSpeedButton
           Left = 92
           Height = 24
+          Hint = 'Speichern unter...'
           Top = 0
           Width = 23
           Align = alLeft
+          Flat = True
+          ShowHint = True
+          ParentShowHint = False
         end
         object SaveBtn: TSpeedButton
           Left = 69
           Height = 24
+          Hint = 'Speichern'
           Top = 0
           Width = 23
           Align = alLeft
-        end
-        object NewProjBtn: TSpeedButton
-          Left = 46
-          Height = 24
-          Top = 0
-          Width = 23
-          Align = alLeft
+          Flat = True
+          ShowHint = True
+          ParentShowHint = False
         end
         object SaveAllBtn: TSpeedButton
           Left = 115
           Height = 24
+          Hint = 'Alle Speichern'
           Top = 0
           Width = 23
           Align = alLeft
+          Flat = True
+          ShowHint = True
+          ParentShowHint = False
         end
         object CloseAllBtn: TSpeedButton
           Left = 161
           Height = 24
+          Hint = 'Alle schließen'
           Top = 0
           Width = 23
           Align = alLeft
+          Flat = True
+          ShowHint = True
+          ParentShowHint = False
         end
         object CloseEditorBtn: TSpeedButton
           Left = 138
           Height = 24
+          Hint = 'Editorfenster schließen'
           Top = 0
           Width = 23
           Align = alLeft
+          Flat = True
+          ShowHint = True
+          ParentShowHint = False
+        end
+        object NewProjBtn: TSpeedButton
+          Left = 46
+          Height = 24
+          Hint = 'Neues Project'
+          Top = 0
+          Width = 23
+          Align = alLeft
+          Flat = True
+          Glyph.Data = {
+            36090000424D3609000000000000360000002800000018000000180000000100
+            2000000000000009000064000000640000000000000000000000000000000000
+            0000000000000000000000000000000000000000000000000000000000000000
+            0000000000000000000000000000000503010000000700000013000000190000
+            0019000000170000000D00000003000000000000000000000000000000000906
+            01050000000B0000000E0000000E0000000E0000000E0000000E0000000E0000
+            000E0000000E0000000E0000000D0000001300100835005D2F8A006532A50063
+            31A40065329F004523600000001A000A06070000000000000000140E03010000
+            001644310C5545320D5A45320D5B45320D5B45320D5B45320D5B45320D5B4532
+            0D5B45320D5B45320D5B482E0A59234D2377008449E400B377FD00C88BFF00C9
+            8CFF00C385FF009C5EF900723EB000000018001009050000000000000000A675
+            148BC08D28FFC08D26FFBF8C26FFBF8C26FFBF8C26FFBF8C26FFBF8C26FFBF8C
+            26FFBF8C26FFC28D27FFBD8E2BFF1B9048FF00C98DFF00CD8EFF0FCA8DFF21CD
+            94FF00C989FF00D195FF00A565FF00753FAC0000000E00000001000000009D62
+            008CFAF6EFFFF6F1E4FFF7F3E7FFF8F3E7FFF8F3E7FFF8F3E7FFF8F3E7FFF8F3
+            E7FFF8F3E7FFFFF7EDFF74C9ACFF00B271FF00C98BFF00C483FF87E1C1FFFFFF
+            FFFF00BD76FF00C688FF00CE91FF009C5CF800552C4E00000001000000009C61
+            008CF7F0E4FFE4D4ABFFE7D7B2FFE8D7B3FFE8D7B3FFE8D7B3FFE8D7B3FFE8D7
+            B3FFE8D8B3FFFFE3C2FF008640FF00C787FF00BC78FF00B76DFF78DAB3FFFFFF
+            FFFF00B160FF00BA73FF00C383FF00BB7DFF00763C8900000000000000009C61
+            008CF7F0E4FFE6D5ADFFE8D9B5FFE8D9B5FFE8D9B5FFE8D9B5FFE8D9B5FFE8D9
+            B5FFE9D9B6FFFFE5C5FF008541FF00C584FFF0FBF7FFFFFFFFFFFFFFFFFFFEFF
+            FEFFFFFFFFFFFFFFFFFF1FC489FF1DC690FF0075398C00000000000000009C61
+            008CF7F0E4FFE3D1A6FFE5D5ADFFE6D5ADFFE6D5ADFFE6D5ADFFE6D5ADFFE6D5
+            ADFFE6D6AEFFFFE1BEFF00833EFF25CC95FF6FD8B0FF7EDAB6FFBFECD9FFFFFF
+            FFFF78D6AFFF88DEBDFF08BC7AFF50D1A5FF0076368C00000000000000009C60
+            008CF6EFE0FFF8F3E8FFF9F4E9FFF9F4E9FFF9F4E9FFF9F4E9FFF9F4E9FFF9F4
+            E9FFFAF4E9FFFFFFFAFF279E67FF43CA9CFF00BA78FF00B773FF7ED9B5FFFFFF
+            FFFF00AF64FF00B874FF17C38AFF63C59EFC0076356B00000000000000009C60
+            008CF6EEE0FFF8F4E9FFF8F4E9FFF8F4E9FFF8F4E9FFF8F4E9FFF8F4E9FFF8F4
+            E9FFF8F4E9FFFFF9F0FFB5D7BDFF37AC78FF3ACC9BFF05B876FF6ED4ACFFEEF9
+            F4FF00B068FF19C186FF81DDBEFF008A4ADD003E200C00000000000000009C60
+            008CF6EFE0FFF6F1E4FFF7F1E4FFF6F1E4FFF6F1E4FFF6F1E4FFF6F1E4FFF7F1
+            E4FFF6F1E4FFF8F2E6FFF9F5EAFF5DB487FF3CAD7BFF5FCFA8FF4ED1A3FF46CC
+            99FF5AD5ADFF60C9A3FF0E9357E5007B3F380000000000FFA600000000009C60
+            008CF6EFE1FFF5EEDFFFF5EFE0FFF5EFE0FFF5EFE0FFF5EFE0FFF5EFE0FFF5EF
+            E0FFF5EFE0FFF5EFE1FFF8F0E3FFFBF3E7FFB3D3B7FF249C62FF02813AFF0684
+            3FFF0A8741FF258640AF00753E1A0000000000DB750000000000000000009C60
+            008CF6EFE1FFF3EDDAFFF4EEDCFFF4EEDDFFF4EEDCFFF4EEDCFFF4EEDCFFF4EE
+            DCFFF4EEDCFFF4EEDDFFF4EEDDFFF5EEDDFFFEF2E3FFFFF9EDFFFFFDF3FFFFFC
+            F2FFFFF5EAFFBE60008B00000000000000000000000000000000000000009C61
+            008CF6EFE1FFF3EAD6FFF4ECD8FFF4ECD9FFF4ECD8FFF4ECD8FFF4ECD8FFF4EC
+            D8FFF4ECD8FFF4ECD8FFF4ECD8FFF3EBD8FFF4EBD9FFF5ECD9FFF5EBD9FFF5EB
+            D7FFF6EFE1FF9F61008C00000000000000000000000000000000000000009C61
+            008CF6EFE1FFF1E8D1FFF2E9D4FFF2E9D5FFF2E9D4FFF2E9D4FFF2E9D4FFF2E9
+            D4FFF2E9D4FFF2E9D4FFF2E9D4FFF2E9D5FFF2E9D4FFF2E9D4FFF2E9D4FFF1E8
+            D1FFF6EFE1FF9C61008C00000000000000000000000000000000000000009C61
+            008CF6EFE2FFF0E6CDFFF1E8D0FFF1E8D1FFF1E8D0FFF1E8D0FFF1E8D0FFF1E8
+            D0FFF1E8D0FFF1E8D0FFF1E8D1FFF1E8D0FFF1E8D0FFF1E8D0FFF1E8D0FFF0E6
+            CDFFF6EFE2FF9C61008C00000000000000000000000000000000000000009C61
+            008CF6F0E2FFEEE2C8FFF0E5CCFFF0E5CDFFF0E5CCFFF0E5CCFFF0E5CCFFF0E5
+            CCFFF0E5CCFFEFE5CDFFEFE5CCFFEEE3C8FFEEE3C7FFEEE3C7FFEEE2C7FFECE0
+            C3FFF6F0E2FF9C61008C00000000000000000000000000000000000000009C61
+            008CF6F0E2FFECE1C3FFEEE3C8FFEEE3C9FFEEE3C8FFEEE3C8FFEEE3C8FFEEE3
+            C8FFEEE3C8FFEEE3C9FFEEE3C9FFFAF7F0FFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+            FFFFF5EEDFFF9B61008C00000000000000000000000000000000000000009C61
+            008CF7F0E2FFEBDEBFFFEDE1C4FFEDE1C5FFEDE1C4FFEDE1C4FFEDE1C4FFEDE1
+            C4FFEDE1C5FFEDE1C4FFEFE4CBFFE6D3AEFFB57B15FFB37910FFB2760CFFAD6F
+            03FFF8F3E7FFA267008800000000000000000000000000000000000000009C61
+            008CF7F0E3FFE9DCBAFFECDFC0FFECDFC1FFECDFC0FFECDFC0FFECDFC0FFECDF
+            C0FFECDFC1FFECDFC0FFEEE3C8FFD1AE6FFFF8F4EBFFFEFDFAFFFCF9F2FFFFFF
+            FEFFC9A151F1A66C003400000000000000000000000000000000000000009C61
+            008CF7F0E3FFE8D9B6FFEADDBCFFEADDBDFFEADDBDFFEADDBDFFEADDBDFFEADD
+            BDFFEADDBDFFEADDBCFFEDE1C5FFD3B175FFF0E5CFFFF1E8D1FFFAF6EFFFC090
+            32FF6F3D001000000000FFF82300000000000000000000000000000000009C61
+            008CF7F0E4FFE5D6AEFFE8D9B5FFE9D9B5FFE9D9B5FFE9D9B5FFE9D9B5FFE9D9
+            B5FFE9D9B5FFE8D8B5FFEADFBEFFD3B075FFEADCBFFFFBF8F3FFC89E4BED733D
+            0010FFFF1F00000000000000000000000000000000000000000000000000A064
+            008CFAF6EEFFF7F2E5FFF8F3E8FFF8F4E8FFF8F4E8FFF8F4E8FFF8F4E8FFF8F4
+            E8FFF8F4E8FFF8F3E8FFFAF6EDFFEEE1CCFFF6EEE1FFC9A257CF782C00190000
+            000000000000000000000000000000000000000000000000000000000000AE7A
+            125DBE8C29F9BE8B27FFBD8B27FFBD8B27FFBD8B27FFBD8B27FFBD8B27FFBD8B
+            27FFBD8B27FFBD8B27FFBD8B27FFBE8D29FFBD8D2DCB5D27000B00000000FFC4
+            0F00000000000000000000000000000000000000000000000000
+          }
+          ShowHint = True
+          ParentShowHint = False
         end
       end
       object PairSplitterSide2: TPairSplitterSide
@@ -140,23 +324,32 @@ object MainForm: TMainForm
         Width = 1037
         ClientWidth = 1037
         ClientHeight = 24
-        object CompileBtn: TSpeedButton
+        object RunBtn: TSpeedButton
           Left = 0
           Height = 24
+          Hint = 'Ausführen'
           Top = 0
           Width = 23
           Align = alLeft
+          Flat = True
+          ShowHint = True
+          ParentShowHint = False
         end
-        object RunBtn: TSpeedButton
+        object StopBtn: TSpeedButton
           Left = 23
           Height = 24
+          Hint = 'Halt'
           Top = 0
           Width = 23
           Align = alLeft
+          Flat = True
+          ShowHint = True
+          ParentShowHint = False
         end
         object SelectModeBox: TComboBox
           Left = 56
           Height = 23
+          Hint = 'Modus'
           Top = 1
           Width = 100
           ItemHeight = 15
@@ -165,6 +358,8 @@ object MainForm: TMainForm
             'Debug'
             'Release'
           )
+          ParentShowHint = False
+          ShowHint = True
           Style = csDropDownList
           TabOrder = 0
           Text = 'Debug'
@@ -185,7 +380,7 @@ object MainForm: TMainForm
           OnClick = NewProjectItemClick
         end
         object NewFileItem: TMenuItem
-          Caption = 'AAL Datei'
+          Caption = 'AAL Source'
           ShortCut = 16462
           OnClick = NewFileItemClick
         end
