--- a/Editor/formeditor.lfm
+++ b/Editor/formeditor.lfm
@@ -8,7 +8,8 @@ object FormEditFrame: TFormEditFrame
   Color = clDefault
   ParentColor = False
   TabOrder = 0
-  DesignLeft = 461
+  DesignLeft = 397
+  DesignTop = 170
   object EditorScrollBox: TScrollBox
     Left = 0
     Height = 563
@@ -44,9 +45,9 @@ object FormEditFrame: TFormEditFrame
     end
     object FormCaptionLabel: TLabel
       Left = 16
-      Height = 15
+      Height = 25
       Top = 8
-      Width = 34
+      Width = 52
       Caption = 'Form1'
       ParentColor = False
     end
@@ -73,11 +74,11 @@ object FormEditFrame: TFormEditFrame
       TabOrder = 0
       object ControlProps: TTabSheet
         Caption = 'Eigenschaften'
-        ClientHeight = 228
+        ClientHeight = 218
         ClientWidth = 263
         object PropEditor: TValueListEditor
           Left = 0
-          Height = 228
+          Height = 218
           Top = 0
           Width = 263
           Align = alClient
@@ -129,18 +130,18 @@ object FormEditFrame: TFormEditFrame
           OnGetPickList = EventEditorGetPickList
           ColWidths = (
             64
-            181
+            172
           )
         end
       end
     end
     object FormControlView: TTreeView
       Left = 0
-      Height = 284
-      Top = 23
+      Height = 274
+      Top = 33
       Width = 271
       Align = alClient
-      DefaultItemHeight = 24
+      DefaultItemHeight = 28
       Images = ImageList1
       TabOrder = 1
       OnChange = FormControlViewChange
@@ -149,7 +150,7 @@ object FormEditFrame: TFormEditFrame
     end
     object TreeFilterEdit1: TTreeFilterEdit
       Left = 0
-      Height = 23
+      Height = 33
       Top = 0
       Width = 271
       ButtonWidth = 23
