--- a/Editor/editor.lfm
+++ b/Editor/editor.lfm
@@ -2,35 +2,36 @@ object EditorFrame: TEditorFrame
   Left = 0
   Height = 563
   Top = 0
-  Width = 880
+  Width = 878
   ClientHeight = 563
-  ClientWidth = 880
+  ClientWidth = 878
   Font.Quality = fqProof
   ParentFont = False
   TabOrder = 0
-  DesignLeft = 477
+  DesignLeft = 1270
+  DesignTop = 140
   object SearchBar: TPanel
     Left = 0
     Height = 34
     Top = 529
-    Width = 880
+    Width = 878
     Align = alBottom
     BevelOuter = bvNone
     ClientHeight = 34
-    ClientWidth = 880
+    ClientWidth = 878
     TabOrder = 0
     Visible = False
     object Label1: TLabel
       Left = 0
-      Height = 15
+      Height = 25
       Top = 4
-      Width = 35
+      Width = 51
       Caption = 'Suche:'
       ParentColor = False
     end
     object SearchEdit: TEdit
       Left = 56
-      Height = 23
+      Height = 33
       Top = 0
       Width = 152
       OnKeyUp = SearchEditKeyUp
@@ -47,7 +48,7 @@ object EditorFrame: TEditorFrame
     end
     object ReplaceEdit: TEdit
       Left = 288
-      Height = 23
+      Height = 33
       Top = 0
       Width = 152
       OnKeyUp = ReplaceEditKeyUp
@@ -72,7 +73,7 @@ object EditorFrame: TEditorFrame
       TabOrder = 4
     end
     object CloseSearchButton: TSpeedButton
-      Left = 845
+      Left = 843
       Height = 34
       Top = 0
       Width = 35
@@ -87,7 +88,7 @@ object EditorFrame: TEditorFrame
     Left = 0
     Height = 529
     Top = 0
-    Width = 645
+    Width = 643
     Align = alClient
     Font.Height = -22
     Font.Name = 'Courier New'
@@ -524,7 +525,7 @@ object EditorFrame: TEditorFrame
     MouseActions = <>
     MouseTextActions = <>
     MouseSelActions = <>
-    Options = [eoAutoIndent, eoBracketHighlight, eoGroupUndo, eoSmartTabs, eoTabsToSpaces, eoTrimTrailingSpaces]
+    Options = [eoAutoIndent, eoBracketHighlight, eoGroupUndo, eoSmartTabs, eoTabsToSpaces, eoTrimTrailingSpaces, eoDragDropEditing]
     MouseOptions = [emDragDropEditing, emShowCtrlMouseLinks, emCtrlWheelZoom]
     VisibleSpecialChars = [vscSpace, vscTabAtLast]
     RightEdge = 1024
@@ -573,7 +574,7 @@ object EditorFrame: TEditorFrame
       object SynGutterSeparator1: TSynGutterSeparator
         Width = 2
         MouseActions = <>
-        MarkupInfo.Background = clWhite
+        MarkupInfo.Background = clNone
         MarkupInfo.Foreground = clGray
       end
       object SynGutterCodeFolding1: TSynGutterCodeFolding
@@ -586,7 +587,7 @@ object EditorFrame: TEditorFrame
     end
   end
   object CodeExplorerPanel: TPanel
-    Left = 645
+    Left = 643
     Height = 529
     Top = 0
     Width = 235
@@ -607,8 +608,6 @@ object EditorFrame: TEditorFrame
       Caption = 'Code Explorer'
       ClientHeight = 30
       ClientWidth = 231
-      Color = clBtnFace
-      ParentColor = False
       TabOrder = 0
       object CloseCodeExplorerButton: TSpeedButton
         Left = 205
@@ -627,7 +626,8 @@ object EditorFrame: TEditorFrame
       Top = 34
       Width = 235
       Align = alClient
-      DefaultItemHeight = 24
+      DefaultItemHeight = 28
+      ExpandSignType = tvestPlusMinus
       Images = CodeExplorerImages
       ReadOnly = True
       TabOrder = 1
@@ -642,9 +642,9 @@ object EditorFrame: TEditorFrame
     end
     object Label2: TLabel
       Left = 121
-      Height = 15
+      Height = 25
       Top = 206
-      Width = 34
+      Width = 51
       Caption = 'Label2'
       ParentColor = False
     end
