--- a/Editor/editor.lfm
+++ b/Editor/editor.lfm
@@ -6,6 +6,7 @@ object EditorFrame: TEditorFrame
   ClientHeight = 563
   ClientWidth = 878
   Font.Quality = fqProof
+  LCLVersion = '1.7'
   ParentFont = False
   TabOrder = 0
   DesignLeft = 1270
@@ -606,8 +607,8 @@ object EditorFrame: TEditorFrame
       BevelOuter = bvNone
       BorderStyle = bsSingle
       Caption = 'Code Explorer'
-      ClientHeight = 30
-      ClientWidth = 231
+      ClientHeight = 34
+      ClientWidth = 235
       TabOrder = 0
       object CloseCodeExplorerButton: TSpeedButton
         Left = 205
